basic-install/ingress-values-rk8s.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-kubernetes-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dashboard.rk8s
      http:
        paths:
          - backend:
              serviceName: dashboard-kubernetes-dashboard
              servicePort: 80
            path: /
